--- a/.github/ISSUE_TEMPLATE/ux_report.yaml
+++ b/.github/ISSUE_TEMPLATE/ux_report.yaml
@@ -32,7 +32,10 @@ body:
     attributes:
       label: DESCRIPTION OF ISSUE
       description: Describe the issue itself. Be as detailed as possible, preferably add a screenshot or recording to explain the issue further
-      placeholder: Paste here
+      placeholder: |
+        Paste here and drag screenshots
+
+        Tip: You can attach images by clicking this area to highlight it and then dragging files in.
   - type: checkboxes
     id: viewport
     attributes:
