--- a/.github/ISSUE_TEMPLATE/ux_report.yaml
+++ b/.github/ISSUE_TEMPLATE/ux_report.yaml
@@ -8,7 +8,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thanks for taking the time to fill out this bug report!
+        # UX/UI Design Change Report
   - type: checkboxes
     id: urgency
     attributes:
