--- a/.github/ISSUE_TEMPLATE/ux_report.yaml
+++ b/.github/ISSUE_TEMPLATE/ux_report.yaml
@@ -2,7 +2,7 @@ name: UX/UI Design Change Report
 description: Use this template for tracking UX/UI Design changes.
 title: "[UX]: "
 labels: ["ux/design"]
-assignees: ["donouwens", "lukaw3d"]
+assignees: ["donouwens"]
 
 body:
   - type: checkboxes
